Bug 276003 - fancy clickable status icons should be more transparent when deactivated
Summary: fancy clickable status icons should be more transparent when deactivated
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.10
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-18 21:54 UTC by Ivan D Vasin
Modified: 2013-02-11 07:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan D Vasin 2011-06-18 21:54:00 UTC
Version:           2.1.0 (using KDE 4.6.4) 
OS:                Linux

the clickable status icons seem too bright to me when they are inactive.  as a result, it's not easy to identify active statuses in my peripheral vision--often i need to look at the icons to recognize which statuses are active.

contrast this with the clickable stars in Thunderbird and in Gmail's web interface, which are immediately noticeable even in peripheral vision.

maybe the fact that the icons are so close together doesn't help; i'm not sure.  maybe the fact that i use a dark color scheme exacerbates the problem.

regardless, i think setting the transparency higher on inactive status icons should help.  they only need to be visible enough to find them when you want to click them.  even a dim grey outline is sufficient, but transparency looks better.

if this is contentious, it could be configurable, but personally i think that's overkill.

Reproducible: Always

Steps to Reproduce:
View --> Message List --> Theme --> Fancy with Clickable Status

Actual Results:  
inactive status icons are too similar in color to their active neighbors.

Expected Results:  
active status icons are much more easily noticeable than inactive ones.

OS: Linux (x86_64) release 2.6.38-10-generic
Compiler: cc
Comment 1 Martin Koller 2013-02-09 21:55:43 UTC
I agree. E.g. the "Important" Icon is hard to distinguish when active or inactive.
Comment 2 Laurent Montel 2013-02-11 07:25:11 UTC
Git commit 58604c187498443159c4d0a259abafaa4ee8cf13 by Montel Laurent.
Committed on 11/02/2013 at 08:24.
Pushed by mlaurent into branch 'KDE/4.10'.

Fix Bug 276003 - fancy clickable status icons should be more transparent when deactivated

FIXED-IN: 4.10.1

M  +1    -1    messagelist/core/themedelegate.cpp

http://commits.kde.org/kdepim/58604c187498443159c4d0a259abafaa4ee8cf13