Fix Bug 276003 - fancy clickable status icons should be more transparent when deactivated

FIXED-IN: 4.10.1
BUG: 276003